[gd_scene load_steps=3 format=3 uid="uid://vhx3bkgoif43"]

[ext_resource type="VideoStream" uid="uid://c6higsh86v160" path="res://Assets/gifs/light-gold.ogv" id="1_yl1y7"]
[ext_resource type="Script" uid="uid://dfesven8e7gry" path="res://Main_screen/Scripts/main_window.gd" id="2_71nsx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("1_yl1y7")
autoplay = true
expand = true
loop = true

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.537255, 0.760784, 0.482353, 0.686275)

[node name="ColorRect2" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 388.0
offset_top = 206.0
offset_right = 819.0
offset_bottom = 446.0
color = Color(0.995516, 0.730933, 0.879764, 0.6)

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 441.0
offset_top = 206.0
offset_right = 768.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.776471, 0.364706, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Enter your Hospital ID:"

[node name="ExitButton" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 1081.0
offset_top = 14.0
offset_right = 1138.0
offset_bottom = 55.0
text = "EXIT"

[node name="HospID" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 429.0
offset_top = 266.0
offset_right = 787.0
offset_bottom = 332.0
placeholder_text = "Eg 1234567H"

[node name="NewPatient" type="Button" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 614.0
offset_top = 355.0
offset_right = 772.0
offset_bottom = 420.0
text = "New Patient"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 428.0
offset_top = 355.0
offset_right = 589.0
offset_bottom = 420.0
text = "Play"
script = ExtResource("2_71nsx")

[node name="Window" type="Window" parent="."]
initial_position = 1
size = Vector2i(500, 210)
visible = false

[node name="Label" type="Label" parent="Window"]
offset_top = 44.0
offset_right = 504.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 17
text = "  Please make sure you have entered the correct Hospital ID.

      If the patient is new, click on new patient and register"

[node name="TimerLabel" type="CanvasLayer" parent="Window/Label"]

[node name="Button" type="Button" parent="Window"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -60.0
offset_right = 47.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
text = "OK"

[node name="patient_notfound" type="Window" parent="."]
position = Vector2i(450, 300)
size = Vector2i(300, 100)
visible = false

[node name="Label" type="Label" parent="patient_notfound"]
offset_right = 40.0
offset_bottom = 23.0
text = "Patient not found"

[node name="patient_nf_ok" type="Button" parent="patient_notfound"]
offset_left = 100.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 81.0
text = "Ok"

[connection signal="pressed" from="TextureRect/ExitButton" to="PlayButton" method="_on_exit_button_pressed"]
[connection signal="text_submitted" from="TextureRect/HospID" to="PlayButton" method="_on_hosp_id_text_submitted"]
[connection signal="pressed" from="TextureRect/NewPatient" to="PlayButton" method="_on_new_patient_pressed"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
[connection signal="close_requested" from="Window" to="PlayButton" method="_on_window_close_requested"]
[connection signal="pressed" from="Window/Button" to="PlayButton" method="_on_window_close_requested"]
[connection signal="pressed" from="patient_notfound/patient_nf_ok" to="PlayButton" method="_on_patient_nf_ok_pressed"]
